--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,8 +59,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/logo.png
+    - assets/images/amp.png
+    - assets/images/capa.png
+    - assets/images/gibson-lespaul.png
+    - assets/images/ibanez-rg350.png
+    - assets/images/pedal-orange.png
+    - assets/images/pedal-pink.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
